fix visibility modal on fast scroll in mobile

--- a/components/modal/modal.module.scss
+++ b/components/modal/modal.module.scss
@@ -4,7 +4,7 @@
   position: fixed;
   left: 0;
   bottom: 0;
-  z-index: 21;
+  z-index: 22;
   user-select: none;
 }
 
